# fp

./: README.md
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/flag-cache/: sem1-0.1.0.0
sem1/: sem1.cabal
sem2/: README.md  sem2.cabal
sem2/src/: Main.hs  PreviousSem.hs  Solution.hs  Types.hs
src/: Main.hs
